--- a/scss/components/_hero-section.scss
+++ b/scss/components/_hero-section.scss
@@ -105,14 +105,16 @@
     }
 
     &__button {
+        
         color: var(--minor-color);
         background-color: var(--secondary-color);
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.63;
-        letter-spacing: 0.06em;
-
+        
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+height: 50px;
         border: none;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 5px;
         transition-property: fill, backgroud-color;
         transition-duration: 250ms;
@@ -127,6 +129,11 @@
         }
 
         @media screen and (min-width: 768px) {
+            font-weight: 700;
+                font-size: 16px;
+                line-height: 1.88;
+                letter-spacing: 0.06em;
+            
             padding-left: 24px;
             padding-top: 10px;
             padding-right: 24px;
@@ -134,11 +141,16 @@
         }
 
         @media screen and (min-width: 1200px) {
-            padding-left: 32px;
-            padding-top: 14px;
-            padding-right: 32px;
-            padding-bottom: 6px;
-
+            
+font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
         }
     }
 }
