--- a/scss/components/_page-header.scss
+++ b/scss/components/_page-header.scss
@@ -146,6 +146,14 @@
     align-items: center;
 }
 
+.header__logo{
+    @media screen and (max-width:767px){
+      position: absolute;
+    top: 20px;
+    left: 15px;  
+    }
+    
+}
 
 
 .header__logo--blue {
@@ -268,8 +276,8 @@
 
 .header__button{
 position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     
 display: inline-flex;
 margin: 0;
@@ -298,6 +306,7 @@ background-color: transparent;
 .header__button--iconed-cross:focus{
     color: #2196F3;
 }
+
 
 .header__button--dropped-down-menu {
     position: fixed;
